--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ body {
 header {
   text-align: center;
   padding: 2rem;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: #f4f5ef;
 }
 
 .head {
@@ -43,22 +43,31 @@ select {
   padding: 2rem;
   max-width: 800px;
 }
+.buttonDiv{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
+}
 .button-grid button {
-  padding: 1rem;
-  font-size: 1rem;
-  background-color: #00008b;
-  color: white;
+  padding: 0.5rem;
+  font-size: 1.25rem;
+  background-color: white;
+  color: black;
   border: none;
-  border-radius: 20px;
+  border-radius: 25px;
   cursor: pointer;
   transition: all 0.3s ease;
   justify-content: center;
+  align-items: center;
+  height: 100px;
 }
 
 .button-grid button:hover {
   background-color: white;
   color: #00008b;
+  font-weight: bold;
   border: 1px solid #00008b;
 }
 
@@ -82,7 +91,7 @@ select {
   background-size: cover;
   min-height: 100vh;
   width: auto;
-  padding: 2rem;
+  /* padding: 2rem; */
 }
 
 .header {
@@ -174,21 +183,28 @@ select {
 }
 
 .chat-button {
+  padding: 0;
   position: fixed;
   bottom: 20px;
-  right: 20px;
+  right: 30px;
   background-color: #ffffff;
-  color: black;
-  border: 1px solid #00008b;
-  border-radius: 50%;
-  width: 60px;
-  height: 60px;
-  font-size: 18px;
+  /* border-radius: 50%; */
+  width: 75px;
+  height: 75px;
   cursor: pointer;
   display: flex;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   justify-content: center;
   align-items: center;
+  border-radius: 10%;
+}
+
+.chat-button img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+   border-radius: 10%;
+  pointer-events: none
 }
 
 #google_translate_element {
@@ -217,6 +233,8 @@ select {
   background-color: rgba(255, 255, 255, 0.4);
   border-radius: 10px;
   padding: 20px;
+  margin-left: 2rem;
+  margin-right: 2rem;
   margin-top: 20px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(4px); /* adds a frosted-glass effect */
@@ -310,5 +328,6 @@ table tr:last-child td {
 }
 
 .grey-button{
-  background-color: grey;
+  background-color: #c3c3c3;
+  color:white
 }
